@@ -4,7 +4,7 @@ use strict;
 use warnings;
 
 our $AUTHORITY = 'cpan:TOBYINK';
-our $VERSION   = '0.015_05';
+our $VERSION   = '0.016';
 
 use Scalar::Util qw< blessed >;
 
